# spot-sim

./: .gitignore  .gitmodules  README.md  justfile  pyproject.toml
assets/honeycomb/: Multilamps_Config.usdc  Multilamps_Config.usdz
assets/jar/: jar.usd
docs/: robot_control.md  tasks.md
scripts/dataset_generation/: __init__.py
scripts/dataset_generation/assetsCfg/: __init__.py
scripts/dataset_generation/data_extraction/: data_env.py
scripts/dataset_generation/spot_grasping/: __init__.py  grasp_env.py
scripts/dataset_generation/utils/: __init__.py  camera_utils.py  data_save_utils.py  grasp_data_loader.py  pc_segmentation_utils.py  point_cloud_utils.py  visualization_utils.py
scripts/spot_isaaclab/: README.md  play.py
scripts/spot_isaaclab/bridge/: omnigraph_builder.py
scripts/spot_isaaclab/configs/: assets_config.py  env_cfg.py  global_config.py  scene_config.py
scripts/spot_isaaclab/control/: command_generator.py  frame_transforms.py  kinematics.py  motion_planner.py  robot_interface.py
scripts/spot_isaaclab/envs/: base_env.py  pose_tracking_env.py  position_tracking_env.py  state.py
scripts/spot_isaaclab/isaac_lab/: actions.py  events.py  observations.py
scripts/spot_isaaclab/utils/: __init__.py  collision_utils.py  depth_utils.py  visualization.py
scripts/spot_isaacsim/: __init__.py  play.py
scripts/spot_isaacsim/control/: __init__.py  arm_controller.py  keyboard_controller.py  locomotion_controller.py  (+2 more)
scripts/spot_vlm/: __init__.py  play.py  run_arm_tracking.py
scripts/tools/: install_modules.sh  patch_externals.py
(+89 files in other folders)
